add check style, remove custom logger